--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "apartment-search-desktop",
   "description": "A polished real estate search interface inspired by Apartments.com",
   "dependencies": {
+    "@vercel/analytics": "^1.6.1",
+    "@vercel/speed-insights": "^1.3.1",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.8",
     "lucide-react": "^0.344.0",
