--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "apartment-search-desktop",
   "description": "A polished real estate search interface inspired by Apartments.com",
   "dependencies": {
+    "@clerk/clerk-react": "^5.58.1",
     "@vercel/analytics": "^1.6.1",
     "@vercel/speed-insights": "^1.3.1",
     "clsx": "^2.1.0",
