--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
   "description": "A polished real estate search interface inspired by Apartments.com",
   "dependencies": {
     "@clerk/clerk-react": "^5.58.1",
+    "@types/leaflet": "^1.9.21",
     "@vercel/analytics": "^1.6.1",
     "@vercel/speed-insights": "^1.3.1",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.8",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.344.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.10.1",
     "tailwind-merge": "^2.2.1"
   },
